2009-12-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Move the boring stuff about 
	Introspect() into a notes section because it is too soon to get scary.

2009-12-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Write some text about optional 
	interfaces. Added a Connection Managers section before it, so that we 
	see the point and so we can describe the Telepathy architecture briefly.

	* docs/book/C/icons/: Put the .png files in the folder instead of above.
	* docs/book/C/figures/: Tried adding this again, adding a README because 
	git seems to ignore it if it is empty.

2009-12-20  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/basics_dbus_python/Makefile.am:
	* docs/examples/basics_dbus_python/example.py
	* docs/book/C/telepathy.xml: Basics: Add a little example of calling a 
	D-Bus method with Python.

	* docs/book/insert-example-code.py: Read .py files as well as .h and .cc 
	files.

2009-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/basics_dbus_glib/Makefile.am:
	* docs/examples/basics_dbus_glib/main.c
	* docs/book/C/telepathy.xml: Basics: Add a little example of calling a 
	D-Bus method with dbus-glib.

	* docs/book/C/icons/:
	* docs/book/C/figures/: Added these directories to git. I forgot to do 
	that until now.

2009-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Add a small part of the introduction. 
	Add some sect structure.

2009-01-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: on_get_contacts_by_id(): Ref the 
	TpContact so we can use it later, avoiding the crash when calling 
	tp_contact_get_handle().

2009-01-12  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/send_message/main.c: Set the TargetHandleType too, 
	though this then crashes: 
	https://bugs.freedesktop.org/show_bug.cgi?id=19523